--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Katlyn Buffum",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-ejs-layouts": "^2.0.0",
+    "express-session": "^1.13.0",
     "geocoder": "^0.2.2",
     "google-places": "0.0.2",
     "pg": "^4.4.6",
